# arbitrage-intel-mcp

./: .env.example  .gitignore  Cargo.toml  Makefile  README.md  docker-compose.yaml  go.mod  go.sum  mcp-config.json
internal/transport/mcp/: handlers.go
src/: main.rs
src/domain/: models.rs
src/infrastructure/: clickhouse.rs  mcp.rs  mod.rs
src/usecase/: analyzer.rs  collector.rs  mod.rs
